--- a/style.css
+++ b/style.css
@@ -2,10 +2,11 @@
 /* Google fonts es un recurso muy util */
 body{
     background-color: #f6f5f7;
-    background: url(https://images.wallpapersden.com/image/download/starry-sky-night-stars_Z2VubGaUmZqaraWkpJRmbmdlrWZlbWU.jpg) no-repeat center fixed;
+    background: url(https://i.imgur.com/9Ckshk6.jpg) center fixed;
     object-fit: fill;
     font-family: 'Montserrat', sans-serif;
     color: #3E363F;
+    background-repeat: repeat-x;
 }
 
 #contenedor{
